<resources>
    <string name="app_name">PetFinder</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="imagen_perfil">Imagen del perfil</string>
    <string name="imagen_buscar">Icono de busqueda</string>
    <string name="tv_perdidos">Perdidos</string>
    <string name="tv_encontrados">Encontrados</string>
    <string name="tv_ordenar_filtrar">Ordenar y filtrar</string>
    <string name="fabtn_acciones">Boton flotante acciones</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>