<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity"
    android:background="@color/amarilloClaro">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/rojo"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/round_corner"
            android:contentDescription="@string/imagen_perfil"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/itim"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="78dp"
            android:contentDescription="@string/imagen_buscar"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_perdidos_encontrados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_header"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/itim"
            android:text="@string/tv_perdidos"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="36sp"
            android:fontFamily="@font/itim"
            android:text="@string/tv_encontrados"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:layout_alignTop="@id/linear_perdidos_encontrados">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:background="@color/black"/>
            <View
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:fontFamily="@font/itim"
        android:layout_below="@id/linear_perdidos_encontrados"
        android:text="@string/tv_ordenar_filtrar"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:shapeAppearance=""
        android:contentDescription="@string/fabtn_acciones"/>


</RelativeLayout>